# equitycalc

./: .gitignore  Cargo.toml  README.md
examples/acme/: option_grants.yaml  psp.yaml  rsu_grants.yaml
src/: main.rs  model.rs  report.rs
src/dto/: mod.rs
src/model/: option.rs  psp.rs  rsu.rs
src/report/: incr.rs  total.rs
