[package]
name = "equitycalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
pretty_assertions = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
